# razer-naga-2014-key-remap

./: .travis.yml  Cargo.toml  LICENSE  README.md  Readme.md  disable-razer-naga-2014-keyboard.conf  razer-naga-2014-key-remap.service
config/: razer-naga-2014-key-remap.toml
src/: event_mapper.rs  input_device.rs  key_map.rs  keymap.rs  main.rs  naga.rs
systemd/: razer-naga-2014-key-remap.service
