[package]
name = "razer-naga-2014-key-remap"
version = "0.1.1"
authors = ["Jakub Podeszwik <jakubpodeszwik@gmail.com>"]
license = "MIT"
keywords = ["razer", "naga"]
readme = "README.md"
repository = "https://github.com/jpodeszwik/razer-naga-2014-key-remap"
homepage = "https://github.com/jpodeszwik/razer-naga-2014-key-remap"

[dependencies]
evdev-rs = "0.1.0"
uinput = "0.1.3"
